Fix editor z-index
Let's hope this doesn't generate more strange behavior

--- a/app/components/Editor/Editor.css
+++ b/app/components/Editor/Editor.css
@@ -1,5 +1,8 @@
 :global {
   /* medium-draft has pretty opinionated css, so we override a few properties */
+  .DraftEditor-editorContainer {
+    z-index: auto;
+  }
 
   .md-RichEditor-root {
     padding: 0;
